--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-body {
+nav {
+  list-style-type: none;
+  width: 100%;
+  background-color: wheat;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
+li a {
+  color: purple;
+  text-decoration: none;
+  display: block;
+  float: left;
+  padding: 15px 50px;
+}
+li a:hover {
+  background-color: pink;
+  color: purple;
+}
+
+h1 {
+  color: purple;
+  text-decoration: purple dotted underline;
+  letter-spacing: -2px;
+  word-pacing: 15px;
+  line-height:3px;
+  font-size: 40px;
+}
+
+body {
+  background-color: pink;
 }
